120 feat add authority name for frontend (#121)
* refactor: refactored authorities names

* feat: added frontend names to authorities

* feat: added frontend authorities to response

* feat: added frontend authorities to response